--- a/README
+++ b/README
@@ -1,18 +1,8 @@
 Padre-Plugin-WebGUI
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+Developer tools for WebGUI
 
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
-
-
-INSTALLATION
+This plugin adds a "WebGUI" item to the Padre plugin menu, with a bunch of WebGUI-oriented features.
 
 To install this module, run the following commands:
 
